<resources>
    <string name="app_name">My Portfolio App</string>
    <string name="action_settings">Settings</string>
    <string name="myportfolioapp">My Nanodegree Apps!</string>
    <string name="spotifystreamer">Spotify Streamer</string>
    <string name="scoresapp">Scores App</string>
    <string name="libraryapp">Library App</string>
    <string name="builditbigger">Build it Bigger</string>
<string name="baconreader">Bacon Reader</string>
    <string name="capstoneproject">Capstone:My own app</string>
</resources>
